Updated the "play" button text

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
      </style>
   </head>
 
-  <button onclick="play()">Music for a more digestible reading experience</button>
+  <button onclick="play()">Squid watching music</button>
   <button onclick="stop()">Stop</button>
   <p>Song: "Ice Cold" by Otis McDonald</p>
 
